# translate_all_lola

./: .gitignore  CMakeLists.txt  README.md  TranslateAllLOLA.cpp  TranslateAllLOLA.h  libbmp.cpp  libbmp.h
